# lmnt-python

./: .pre-commit-config.yaml  .sync_state  CHANGELOG.md  CONTRIBUTING.md  MIGRATING.md  README.md  _carbonsteel.json  api.md  mypy.ini  noxfile.py  pyproject.toml  release-please-config.json  setup.py
.github/: publish.yml
.github/workflows/: ci.yml  post-merge-cleanup.yml  prepare-release.yml  publish.yml  release-doctor.yml  release-please.yml
demo/: .gitignore  convert.py  create-voice.py  create_voice.py  stream.py  synthesize.py
demo/hackathon-template/: README.md  requirements.txt
demo/hackathon-template/config/: config.yaml
demo/hackathon-template/scripts/: lmnt_agent.py
examples/: create-voice.py  generate.py  generate_async.py  speech_session.py
scripts/: bootstrap  format  lint  mock  test
src/lmnt/: __init__.py  _api_version.py  _base_client.py  _client.py  _exceptions.py  _files.py  _models.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py  api.py  test_api.py
src/lmnt/_utils/: _compat.py  _logs.py  _resources_proxy.py  _sync.py
src/lmnt/lib/: __init__.py  websocket_streaming.py
src/lmnt/resources/: __init__.py  accounts.py  sessions.py  speech.py  voices.py
src/lmnt/types/: __init__.py  account_retrieve_response.py  duration.py  error_body.py  speech_convert_params.py  speech_generate_detailed_params.py  speech_generate_detailed_response.py  speech_generate_params.py  speech_session_audio.py  speech_session_error.py  speech_session_finish.py  speech_session_flush.py  speech_session_flush_complete.py  speech_session_init.py  speech_session_ready.py  speech_session_reset.py  speech_session_reset_complete.py  speech_session_text.py  speech_session_timestamps.py  speech_stream_eof_command.py  speech_stream_error.py  speech_stream_extras.py  speech_stream_flush_command.py  speech_stream_init_message.py  speech_stream_text_message.py  timestamp.py  voice.py  voice_create_params.py  voice_delete_response.py  voice_list_params.py  voice_list_response.py  voice_update_params.py  voice_update_response.py
test/: README.md  smoke_test.py  test_speech.py  test_voice.py
test/integration/: smoke_test.py
test/unit/: test_speech.py  test_voice.py
tests/: conftest.py  test_client.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_models.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  utils.py
tests/api_resources/: test_accounts.py  test_sessions.py  test_speech.py  test_voices.py
tests/test_utils/: test_datetime_parse.py  test_proxy.py  test_typing.py
