[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.ruff]
cache-dir = "~/.cache/ruff"
line-length = 160
select = [
    "E4", "E7", "E9",
    "F",
    "I",
    "N801", "N802", "N803", "N804", "N805", "N807", "N815", "N816", "N818", "N999",
    "Q",
]
ignore = ["I001"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.per-file-ignores]
# F401 = unused import; this warning doesn't make sense in __init__.py files
"__init__.py" = ["F401"]

[tool.autopep8]
max-line-length = 160
indent-size = 2
