[project]
name = "lmnt"
version = "2.4.0"
description = "The official Python library for the LMNT API"
dynamic = ["readme"]
license = "Apache-2.0"
authors = [
{ name = "Lmnt", email = "feedback@lmnt.com" },
]
dependencies = [
    "httpx>=0.23.0, <1",
    "pydantic>=1.9.0, <3",
    "typing-extensions>=4.10, <5",
    "anyio>=3.5.0, <5",
    "distro>=1.7.0, <2",
    "sniffio",
    "websockets",
]
requires-python = ">= 3.9"
classifiers = [
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "https://github.com/lmnt-com/lmnt-python"
Repository = "https://github.com/lmnt-com/lmnt-python"

[project.optional-dependencies]
aiohttp = ["aiohttp", "httpx_aiohttp>=0.1.8"]

[dependency-groups]
dev = [
    "pyright==1.1.399",
    "mypy==1.14.1",
    "respx==0.22.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.9.4",
    "time-machine==2.9.0",
    "nox==2023.4.22",
    "dirty-equals==0.6.0",
    "importlib-metadata==7.0.0",
    "rich==13.7.1",
    "pytest-xdist==3.7.0",
]

[tool.uv]
# Pin transitive deps to the versions previously locked by Rye in
# requirements.lock / requirements-dev.lock. Bump deliberately by editing
# this list (or removing the constraint entirely) and re-running `uv lock`.
constraint-dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.8",
    "aiosignal==1.3.2",
    "annotated-types==0.6.0",
    "anyio==4.4.0",
    "argcomplete==3.1.2",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "certifi==2023.7.22",
    "colorlog==6.7.0",
    "distlib==0.3.7",
    "distro==1.8.0",
    "exceptiongroup==1.2.2",
    "execnet==2.1.1",
    "filelock==3.12.4",
    "frozenlist==1.6.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-aiohttp==0.1.8",
    "idna==3.4",
    "iniconfig==2.0.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "multidict==6.4.4",
    "mypy-extensions==1.0.0",
    "nodeenv==1.8.0",
    "packaging==23.2",
    "platformdirs==3.11.0",
    "pluggy==1.5.0",
    "propcache==0.3.1",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pygments==2.18.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "setuptools==68.2.2",
    "six==1.16.0",
    "sniffio==1.3.0",
    "tomli==2.0.2",
    "typing-extensions==4.12.2",
    "typing-inspection==0.4.1",
    "virtualenv==20.24.5",
    "websockets==15.0.1",
    "yarl==1.20.0",
    "zipp==3.17.0",
]

[build-system]
requires = ["hatchling==1.26.3", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/lmnt"]

[tool.hatch.build.targets.sdist]
# Basically everything except hidden files/directories (such as .github, .devcontainers, .python-version, etc)
include = [
  "/*.toml",
  "/*.json",
  "/*.lock",
  "/*.md",
  "/mypy.ini",
  "/noxfile.py",
  "bin/*",
  "examples/*",
  "src/*",
  "tests/*",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
# replace relative links with absolute links
pattern = '\[(.+?)\]\(((?!https?://)\S+?)\)'
replacement = '[\1](https://github.com/lmnt-com/lmnt-python/tree/master/\g<2>)'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -n auto"
xfail_strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
  "error"
]

[tool.pyright]
# this enables practically every flag given by pyright.
# there are a couple of flags that are still disabled by
# default in strict mode as they are experimental and niche.
typeCheckingMode = "strict"
pythonVersion = "3.9"

exclude = [
    "_dev",
    ".venv",
    ".nox",
    ".git",
]

reportImplicitOverride = true
reportOverlappingOverload = false

reportImportCycles = false
reportPrivateUsage = false

[tool.mypy]
pretty = true
show_error_codes = true

# Exclude _files.py because mypy isn't smart enough to apply
# the correct type narrowing and as this is an internal module
# it's fine to just use Pyright.
#
# We also exclude our `tests` as mypy doesn't always infer
# types correctly and Pyright will still catch any type errors.
exclude = ['src/lmnt/_files.py', '_dev/.*.py', 'tests/.*']

strict_equality = true
implicit_reexport = true
check_untyped_defs = true
no_implicit_optional = true

warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

# Turn these options off as it could cause conflicts
# with the Pyright options.
warn_unused_ignores = false
warn_redundant_casts = false

disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
cache_fine_grained = true

# By default, mypy reports an error if you assign a value to the result
# of a function call that doesn't return anything. We do this in our test
# cases:
# ```
# result = ...
# assert result is None
# ```
# Changing this codegen to make mypy happy would increase complexity
# and would not be worth it.
disable_error_code = "func-returns-value,overload-cannot-match"

# https://github.com/python/mypy/issues/12162
[[tool.mypy.overrides]]
module = "black.files.*"
ignore_errors = true
ignore_missing_imports = true


[tool.ruff]
line-length = 120
output-format = "grouped"
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  # isort
  "I",
  # bugbear rules
  "B",
  # remove unused imports
  "F401",
  # bare except statements
  "E722",
  # unused arguments
  "ARG",
  # print statements
  "T201",
  "T203",
  # misuse of typing.TYPE_CHECKING
  "TC004",
  # import rules
  "TID251",
]
ignore = [
  # mutable defaults
  "B006",
]
unfixable = [
  # disable auto fix for print statements
  "T201",
  "T203",
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"functools.lru_cache".msg = "This function does not retain type information for the wrapped function's arguments; The `lru_cache` function from `_utils` should be used instead"

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
known-first-party = ["lmnt", "tests"]

[tool.ruff.lint.per-file-ignores]
"bin/**.py" = ["T201", "T203"]
"scripts/**.py" = ["T201", "T203"]
"tests/**.py" = ["T201", "T203"]
"examples/**.py" = ["T201", "T203"]
